# SeSAC-upstage_homework

./: .gitignore  pyproject.toml
development_environment_day05/advanced_3_layered/: main.py
development_environment_day05/advanced_3_layered/controller/: todo_route.py
development_environment_day05/advanced_3_layered/repository/: todo_repo.py
development_environment_day05/advanced_3_layered/service/: todo_service.py
development_environment_day05/advanced_sql_alchemy/: main.py
development_environment_day05/advanced_sql_alchemy/controller/: todo_route.py
development_environment_day05/advanced_sql_alchemy/model/: todo.py
development_environment_day05/advanced_sql_alchemy/repository/: todo_repo.py
development_environment_day05/advanced_sql_alchemy/service/: todo_service.py
development_environment_day05/basic/: main.py
network_and_cloud/: docker-compose.yml
network_and_cloud/day01/advanced/: main.py
network_and_cloud/day01/advanced/controller/: todo_route.py
network_and_cloud/day01/advanced/model/: todo.py
network_and_cloud/day01/advanced/repository/: connection.py  todo_repo.py
network_and_cloud/day01/advanced/service/: todo_service.py
network_and_cloud/day03/basic/: main.py
